@@ -2,7 +2,7 @@ h1(#subscribers_configuration). Subscribers Configuration
 
 h2(#push_stream_subscriber). push_stream_subscriber <a name="push_stream_subscriber" href="#">&nbsp;</a>
 
-*syntax:* _push_stream_subscriber [streaming | polling | long-polling | eventsource]_
+*syntax:* _push_stream_subscriber [streaming | polling | long-polling | eventsource | websocket]_
 
 *default:* _streaming_
 
@@ -13,6 +13,8 @@ This location only supports GET http method to receive published messages.
 And has three possible values to set push mode: streaming, polling, long-polling. The default values is streaming.
 The polling and long-polling modes could be set by the request header *X-Nginx-PushStream-Mode* overriding push_stream_subscriber directive value.
 The eventsource mode enable "Event Source":eventsource_ref support for subscribers. Using headers Event-ID and Event-Type on publish is possible to set values to _id:_ and _event:_ attributes on message sent to subscribers.
+The websocket mode enable subscriber to use WebSocket protocol.
+
 
 <pre>
   # streaming subscriber location
@@ -53,26 +55,10 @@ The eventsource mode enable "Event Source":eventsource_ref support for subscribe
   }
 
   curl localhost/sub/ch1                                           #eventsource request
-</pre>
 
-
-h2(#push_stream_websocket). push_stream_websocket <a name="push_stream_websocket" href="#">&nbsp;</a>
-
-*syntax:* _push_stream_websocket_
-
-*default:* _none_
-
-*context:* _location_
-
-*release version:* _0.3.2_
-
-Defines a location as a subscriber using WebSocket protocol. This location represents a subscriber's interface to a channel's message queue.
-This location only supports GET http method to receive published messages.
-
-<pre>
-  # websocket subscriber location
-  location /ws/(.*) {
-      push_stream_websocket;
+  # eventsource subscriber location
+  location /sub/(.*) {
+      push_stream_subscriber                      websocket;
       # positional channel path
       push_stream_channels_path                   $1;
   }
