@@ -290,16 +290,17 @@ static const ngx_str_t  NGX_HTTP_PUSH_STREAM_MODE_STREAMING   = ngx_string("stre
 static const ngx_str_t  NGX_HTTP_PUSH_STREAM_MODE_POLLING     = ngx_string("polling");
 static const ngx_str_t  NGX_HTTP_PUSH_STREAM_MODE_LONGPOLLING = ngx_string("long-polling");
 static const ngx_str_t  NGX_HTTP_PUSH_STREAM_MODE_EVENTSOURCE = ngx_string("eventsource");
+static const ngx_str_t  NGX_HTTP_PUSH_STREAM_MODE_WEBSOCKET   = ngx_string("websocket");
 
 #define NGX_HTTP_PUSH_STREAM_SUBSCRIBER_MODE_STREAMING   0
 #define NGX_HTTP_PUSH_STREAM_SUBSCRIBER_MODE_POLLING     1
 #define NGX_HTTP_PUSH_STREAM_SUBSCRIBER_MODE_LONGPOLLING 2
 #define NGX_HTTP_PUSH_STREAM_SUBSCRIBER_MODE_EVENTSOURCE 3
+#define NGX_HTTP_PUSH_STREAM_SUBSCRIBER_MODE_WEBSOCKET   4
 
-#define NGX_HTTP_PUSH_STREAM_PUBLISHER_MODE_NORMAL       4
-#define NGX_HTTP_PUSH_STREAM_PUBLISHER_MODE_ADMIN        5
-#define NGX_HTTP_PUSH_STREAM_STATISTICS_MODE             6
-#define NGX_HTTP_PUSH_STREAM_WEBSOCKET_MODE              7
+#define NGX_HTTP_PUSH_STREAM_PUBLISHER_MODE_NORMAL       5
+#define NGX_HTTP_PUSH_STREAM_PUBLISHER_MODE_ADMIN        6
+#define NGX_HTTP_PUSH_STREAM_STATISTICS_MODE             7
 
 
 #define NGX_HTTP_PUSH_STREAM_WEBSOCKET_VERSION_8         8
