@@ -129,7 +129,7 @@ http {
 
         location ~ /ws/(.*) {
             # activate websocket mode for this location
-            push_stream_websocket;
+            push_stream_subscriber websocket;
 
             # positional channel path
             push_stream_channels_path                   $1;
